--- a/index.html
+++ b/index.html
@@ -10,13 +10,17 @@
     <h1>Learning API With Github Tutorial</h1>
 
     <button id="btnRepos">REPOSITORIES</button>
+    <button id="btnIssues">ISSUES</button>
 
     <div id="divResult"></div>
 
     <script>
       const btnRepos = document.getElementById("btnRepos");
+      const btnIssues = document.getElementById("btnIssues");
+
       const divResult = document.getElementById("divResult");
       btnRepos.addEventListener("click", getRepos);
+      btnIssues.addEventListener("click", getIssues);
 
       async function getRepos() {
         clear();
@@ -38,7 +42,7 @@
       async function getIssues() {
         clear();
         const url =
-          "https://api.github.com/search/rissues?q=author:raisedadead repo:freeCodeCamp/freeCodeCamp";
+          "https://api.github.com/search/issues?q=author:raisedadead repo:freeCodeCamp/freeCodeCamp type:issue";
         const response = await fetch(url);
         const result = await response.json();
         
@@ -46,7 +50,7 @@
           
           const anchor = document.createElement("a");
           anchor.href = i.html_url;
-          anchor.textContent = i.full_name;
+          anchor.textContent = i.title;
           divResult.appendChild(anchor);
           divResult.appendChild(document.createElement("br"));
         });
