--- a/index.html
+++ b/index.html
@@ -64,7 +64,13 @@
       async function getCommits() {
         clear();
         const url = "https://api.github.com/search/commits?q=repo:freecodecamp/freecodecamp";
-        const response = await fetch(url) // here this url gives error : unsupported media type
+        const headers = {
+          'Accept': 'application/vnd.github.cloak-preview'
+        }
+        const response = await fetch(url, {
+          'method' : 'GET', // response.json statusText: Unprocessable Entity
+          'headers' : headers
+        })
         const result = await response.json()
         
         result.items.forEach(i => {
