--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <button id="btnRepos">REPOSITORIES</button>
     <button id="btnIssues">ISSUES</button>
     <button id="btnCommits">COMMITS</button>
+    <button id="btnIssuesPrivate">Private Issues</button>
 
     <div id="divResult"></div>
 
@@ -19,12 +20,14 @@
       const btnRepos = document.getElementById("btnRepos");
       const btnIssues = document.getElementById("btnIssues");
       const btnCommits = document.getElementById("btnCommits");
+      const btnIssuesPrivate = document.getElementById("btnIssuesPrivate");
 
       const divResult = document.getElementById("divResult");
 
       btnRepos.addEventListener("click", getRepos);
       btnIssues.addEventListener("click", getIssues);
       btnCommits.addEventListener("click", e=> getCommits());
+      btnIssuesPrivate.addEventListener("click", e=> getIssuesPrivate());
 
       async function getRepos() {
         clear();
@@ -43,6 +46,22 @@
       }
 
       async function getIssues() {
+        clear();
+        const url =
+          "https://api.github.com/search/issues?q=author:raisedadead repo:freeCodeCamp/freeCodeCamp type:issue";
+        const response = await fetch(url);
+        const result = await response.json();
+
+        result.items.forEach(i => {
+          const anchor = document.createElement("a");
+          anchor.href = i.html_url;
+          anchor.textContent = i.title;
+          divResult.appendChild(anchor);
+          divResult.appendChild(document.createElement("br"));
+        });
+      }
+
+      async function getIssuesPrivate() {
         clear();
         const url =
           "https://api.github.com/search/issues?q=author:raisedadead repo:freeCodeCamp/freeCodeCamp type:issue";
