--- a/index.html
+++ b/index.html
@@ -60,12 +60,18 @@
           divResult.appendChild(document.createElement("br"));
         });
       }
-
+    //13c9ace01a169576746909acad96401276d60eea
       async function getIssuesPrivate() {
         clear();
+        const headers = {
+          "Authorization" : "Token 13c9ace01a169576746909acad96401276d60eea "
+        }
         const url =
-          "https://api.github.com/search/issues?q=author:raisedadead repo:freeCodeCamp/freeCodeCamp type:issue";
-        const response = await fetch(url);
+          "https://api.github.com/search/issues?q=repo:huseintest/sandboxprivate type:issue";
+        const response = await fetch(url, {
+          "method": "GET",
+          "headers": headers
+        });
         const result = await response.json();
 
         result.items.forEach(i => {
