try to access hackyourfuture/class6 repo

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           "Authorization" : "Token 13c9ace01a169576746909acad96401276d60eea "
         }
         const url =
-          "https://api.github.com/search/issues?q=repo:huseintest/sandboxprivate type:issue";
+          "https://api.github.com/search/issues?q=repo:HackYourFuture/Class-6 type:issue";
         const response = await fetch(url, {
           "method": "GET",
           "headers": headers
